# Aseta

./: .gitignore  gatsp.sublime-project
src/gatsp/: CMakeLists.txt  package.xml  setup.py
src/gatsp/experiments/termination_criterion/: curvefit_multifit.py  curvefit_statfile_multifit.py  delta_k.py  experiment_1000_berlin52.py
src/gatsp/include/gatsp/: euclidean_3d_problem.h  genetic_algorithm.h  genetic_algorithm_base.h  path_representation.h  point.h  problem_base.h  quaternion.h  refueling_problem.h  solution_base.h  traditional_genetic_algorithm.h  waypoint.h
src/gatsp/scripts/: curvefit_statfile.py  experiment_1000_berlin52_process_results.py  k_stop_of_k.py  repair_1000_berlin52.py  test_read_tsp.py
src/gatsp/src/: euclidean_3d_problem.cpp  genetic_algorithm.cpp  genetic_algorithm_base.cpp  traditional_genetic_algorithm.cpp
src/gatsp/src/gatsp/: __init__.py  euclidean_3d_problem.cpp  genetic_algorithm.cpp  read_tsp.py  refueling_problem.cpp  waypoint.cpp
src/gatsp/swig/: euclidean_3d_problem.i  gatsp_wrapping.i  waypoint.i
src/gatsp/test/: test_gatsp.py  test_nearest_neighbor.py  test_refueling.py
src/gatsp/test/src/: test_gdb_gatsp.cpp  test_gdb_refueling.cpp
